# talents

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  plan.md
.github/workflows/: ci.yml  deploy-infra.yml  deploy.yml
docs/: screenshot.avif
docs/superpowers/plans/: 2026-04-04-deployment-enhancements.md  2026-04-04-integration-tests.md  2026-04-04-sglang-agentic-loop.md
docs/superpowers/specs/: 2026-04-04-integration-tests-design.md  2026-04-04-sglang-agentic-loop-design.md
frontend/: DESIGN.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.css.ts  App.tsx  api.ts  index.css  skillIcons.tsx  styles.css.ts  types.ts
frontend/src/components/: AgentLoader.css.ts  AgentLoader.tsx  AgentSearch.tsx  BrowseAvailable.tsx  CandidateCard.tsx  SkillSearch.tsx  TalentCard.css.ts  TalentCard.tsx
frontend/src/pages/: CatalogPage.css.ts  CatalogPage.tsx
infra/: cdktf.json  main.ts  package-lock.json  package.json  tsconfig.json
src/: lib.rs  llm.rs  main.rs  sglang.rs
src/agents/: constraint.rs  mod.rs  ranking.rs  research.rs  skill_normalization.rs  summarizer.rs  triage.rs
src/db/: candidate.rs  mod.rs  talent.rs
src/db/migrations/: 20260403_create_candidates.sql  20260406_rename_candidates_to_talents.sql  20260407000000_seed_talents.sql  20260408_hourly_rate_single.sql
src/routes/: candidate.rs  health.rs  mod.rs  talent.rs
tests/: agents_integration.rs  api.rs
tests/common/: mock_llm.rs  mock_sglang.rs  mod.rs  seed.rs
